<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FunApp</string>
    <string name="hello_world">Gallery!</string>
    <string name="action_settings">Settings</string>
    
    <string name="santhoshButton">Santhosh</string>
     <string name="pruthviButton">Pruthvi</string>
      <string name="vishnuButton">Vishnu</string>
      
      <string name="img">img_7</string>

</resources>
